--- a/watchlist/templates/process_edit.html
+++ b/watchlist/templates/process_edit.html
@@ -94,6 +94,7 @@
 					</div>
 				</div>
 
+				<form method="POST" action="/process_edit/{{ process.id }}/">
 				<div id="right">
 					<div id="re_edit_title">
 						<p style="font-weight:bold;margin-bottom:5px;">
@@ -103,7 +104,7 @@
 					<textarea id="re_edit_text" name="edit" cols="80" rows="25">{{ process.code }}</textarea>
 					<input id="re_edit_button" type="submit" class="#" value="重新运行">
 				</div>
-				
+				</form>
 
 
 			</div>
