所有页面前端修改

--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -43,7 +43,7 @@
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index_teacher/">主页</a>
+						<a href="/index_teacher/">我的主页</a>
 					</div>
 				</div>
 
@@ -70,7 +70,7 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings_teacher/">设置</a>
+						<a href="/settings_teacher/">我的设置</a>
 					</div>
 				</div>
 			</div>
