--- a/watchlist/templates/settings.html
+++ b/watchlist/templates/settings.html
@@ -39,7 +39,7 @@
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index/">主页</a>
+						<a href="/index/">我的主页</a>
 					</div>
 				</div>
 
@@ -57,7 +57,7 @@
 						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/process/">进程</a>
+						<a href="/process/">我的进程</a>
 					</div>
 				</div>
 
@@ -66,7 +66,7 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings/">设置</a>
+						<a href="/settings/">我的设置</a>
 					</div>
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 								}
 							</script>
 
-						<table id="setting_table">
+						<table id="setting_table" style="margin-top:45px;">
 							<tr>
 								<th>用户名称</th>
 								<td>
@@ -171,7 +171,7 @@
 								</td>
 							</tr>
 
-							<tr>
+<!-- 							<tr>
 								<th>用户学号</th>
 								<td>
 									{{ current_user.stu_id }}
@@ -198,7 +198,7 @@
 									    }
 									</script>
 								</td>
-							</tr>
+							</tr> -->
 
 							<tr>
 								<th>用户年级</th>
