--- a/watchlist/templates/course_xxx_edit.html
+++ b/watchlist/templates/course_xxx_edit.html
@@ -82,7 +82,7 @@
 									<img src="/static/pic/back.png" alt="">
 								</div>
 							</a>
-							<form method="POST" action="/my_courses_teacher/{{course['id']}}/" ">
+							<form method="POST" action="/my_courses_teacher/{{course['id']}}/" >
 								
 								<p style="text-indent:-156px;">
 									<strong>{{course['name']}}</strong>
