--- a/watchlist/templates/gpu_xxx_teacher.html
+++ b/watchlist/templates/gpu_xxx_teacher.html
@@ -39,7 +39,7 @@
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index_teacher/">主页</a>
+						<a href="/index_teacher/">我的主页</a>
 					</div>
 				</div>
 
@@ -66,7 +66,7 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings_teacher/">设置</a>
+						<a href="/settings_teacher/">我的设置</a>
 					</div>
 				</div>
 			</div>
@@ -74,39 +74,6 @@
 				<div style="width:99%;font-size:30px;text-align:center;margin-top:3px;">
 					<strong>{{ gpus['gpu_name'] }}</strong>
 				</div>
-
-				<!-- <div id="gpu_above">
-					<div id="gpu-using-right">
-						<table style="margin-top:15px;">
-							<tr>
-								<th>
-									<img src="/static/pic/time.png" alt="">
-								</th>
-								<td>开 机 时 长</td>
-								<td style="text-align: left;">xxx</td>
-							</tr>
-							<tr>
-								<th>
-									<img src="/static/pic/use.png" alt="">
-								</th>
-								<td>目前使用量</td>
-								<td style="text-align: left;">xxx</td>
-							</tr>
-							<tr>
-								<th>
-									<img src="/static/pic/temperature.png" alt="">
-								</th>
-								<td>温&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp度</td>
-								<td style="text-align: left;">xxx</td>
-							</tr>
-						</table>
-					</div>
-
-					<div id="gpu-using">
-						GPU使用量的图
-						<img src="" alt="">
-					</div>
-				</div> -->
 				
 				<div id="gpu_below">
 					<div id="gpu-user-list">
