--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -23,8 +23,6 @@ html {
 #container {
 	margin: 0;
 	height: 100%;
-	/*background: linear-gradient(to top right,#2069F9,#48E9B2);*/
-	/* background:url("/static/pic/bg.gif"); */
 }
 
 #header {
@@ -315,7 +313,6 @@ html {
 }
 .select_button:focus {  
     outline: none;
-    /*background:none;*/
 }
 .login_button {
 	float: right;
@@ -737,7 +734,6 @@ html {
 	font-size: 20px;
 	border-radius: 5px;
 	overflow: auto;
-	text-align: justify;
 }
 #courseinfo a{
 	color: black;
@@ -1274,9 +1270,24 @@ html {
 	height: 30%;
 	width: 60%;
 }
-#gpu-user-list{
+
+#gpu_below{
+	min-height: 230px;
+	max-height: 450px;
+	width: 99%;
+	/*border:1px solid white;*/
 	clear:both;
-	width: 97%;
+	margin:0;
+	margin-top:5px;
+	padding-left:5px;
+}
+#gpu-user-list{
+	min-height: 230px;
+	max-height: 450px;
+	overflow: auto;
+	height: 230px;
+	float:left;
+	width: 48%;
 	margin: 0 10px;
 	/*border:1px solid white;*/
 	padding: 5px;
@@ -1291,18 +1302,58 @@ html {
 #gpu-user-list th{
 	width:25%;
 	/*border:1px solid;*/
-	height: 30px;
-	line-height: 30px;
+	height: 32px;
+	line-height: 32px;
 	font-size: 18px;
 	border-bottom: 1px solid rgba(0,0,0,0.3);
 }
 #gpu-user-list td{
 	width: 25%;
-	height:25px;
+	height:99%;
 	/*border:1px solid;*/
 	padding:5px;
 	font-weight: normal;
 	font-size:15px;
 	text-align: center;
+	line-height: 28px;
 	border-bottom: 1px solid rgba(0,0,0,0.3);
+}
+#gpu-process-list{
+	min-height: 230px;
+	max-height: 450px;
+	overflow: auto;
+	float:left;
+	width: 46%;
+	margin: 0 10px;
+	/*border:1px solid white;*/
+	padding: 5px;
+	background: rgba(255,255,255,0.3);
+	border-radius: 5px;
+}
+.gpu-process-list-program {
+	height: 45px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.2);
+	padding: 8px 15px 15px 8px;
+	margin: 8px;
+	font-size: 20px;
+	border-radius: 10px;
+	color: black;
+}
+.gpu-process-list-program a {
+	text-decoration: none;
+	font-size: 20px;
+	color: black;
+	font-weight: bold;
+}
+
+#gpu_above{
+	height: 230px;
+	width: 97%;
+	/*border:1px solid;*/
+	clear:both;
+	margin:0;
+	margin-left:10px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
 }
