--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -1357,3 +1357,21 @@ html {
 	background: rgba(255, 255, 255, 0.2);
 	border-radius: 10px;
 }
+#re_edit_delete {
+	height: 22px;
+	line-height: 25px;
+	float:right;
+	border:1px solid white;
+	font-size: 15px;
+	font-weight: normal;
+	padding: 0 5px;
+	border-radius: 5px;
+	line-height: 25px;
+	background: rgba(255,255,255,0.2);
+	text-decoration:none;
+	margin-top:-5px;
+}
+#re_edit_delete:hover{  
+    outline: none;
+    cursor: pointer;
+}
