部分页面前端修改 pzq 7.5

--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -82,6 +82,9 @@
 							</div>
 							{{ c['name'] }}
 						</a>
+						<form method="POST" action="/my_courses_teacher/">
+							<input id="new_notice_button" type="submit" class="button is-info" value="删除课程">
+						</form>
 						<div id="程序设计info" class="information">
 							<div id="teacherpic" class="teacherpic">
 								<img src="/static/pic/teacher.png" alt="">
