--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -97,7 +97,7 @@
 					<!-- <a id="re_edit" href="/" class="button" style="margin-right:72%;">
 						删除进程
 					</a> -->
-					<input id="re_edit" type="submit" class="button is-primary" value="删除进程" style="margin-right:72%;">
+					<input id="re_edit_delete" type="submit" class="button is-primary" value="删除进程" style="margin-right:72%;">
 					<a id="re_edit" href="/process_edit/{{ process.id }}/" class="button" style="margin-right:20px;">
 						修改代码
 					</a>
