删除课程后端-by hpx

--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -83,7 +83,8 @@
 							{{ c['name'] }}
 						</a>
 						<form method="POST" action="/my_courses_teacher/">
-							<input id="new_notice_button" type="submit" class="button is-info" value="删除课程">
+							<input id="delete_course" value="{{ c['id'] }}" name="delete_course" style="display: none;">
+							<input id="new_notice_button" type="submit" name="submit_button"  class="button is-info" value="删除课程">
 						</form>
 						<div id="程序设计info" class="information">
 							<div id="teacherpic" class="teacherpic">
