--- a/watchlist/templates/new_courses.html
+++ b/watchlist/templates/new_courses.html
@@ -127,7 +127,7 @@
 						</div>
 
 						<div align="center">
-							<input type="submit" class="new_course_button" value="确 认 创 建">
+							<input type="submit" name="submit_button" class="new_course_button" value="确 认 创 建">
 						</div>
 
 					</div>
